fixes some safari layout issues

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -38,6 +38,7 @@
   display: grid;
   grid-template-columns: auto 1fr;
   align-items: center;
+  max-width: 100vw;
   // justify-content: end;
   
   ul {
