--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -183,6 +183,7 @@
   display: flex;
   flex-direction: row;
   justify-content: end;
+  max-width: 70vw;
 
 
   a {
